FIX: gap over users reset in explore top page in mobile

--- a/src/styles/_explore.scss
+++ b/src/styles/_explore.scss
@@ -352,6 +352,7 @@
 
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         grid-gap: 0;
+        padding-top: 0;
       }
 
       @include media-breakpoint-up($desktop-breakpoint) {
